dynamix/force-app/main/default/objects/Data_Sync__c/Data_Sync__c.object-meta.xml
<CustomObject>
    <label>Data_Sync</label>
    <nameField>
        <displayFormat>DS-{0000000}</displayFormat>
        <label>Data_Sync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data_Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>