dynamix/force-app/main/default/objects/Data_Sync__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <label>Response_Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>