dynamix/force-app/main/default/objects/Data_Sync__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Type__c</columns>
    <columns>RecordId__c</columns>
    <columns>Sync_Direction__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordId__c</field>
        <operation>equals</operation>
        <value>a0M71000000npJCEAY</value>
    </filters>
    <label>All</label>
</ListView>